# vertical-backend

./: README.md  manage.py  pyproject.toml
api/: serializers.py  urls.py  views.py
core/: admin.py
core/migrations/: 0001_initial.py  0002_alter_category_options_podcast_podcast_platform_url.py  0003_remove_podcast_image_url_remove_podcast_podcast_url.py
core/models/: Author.py  Category.py  Podcast.py  __init__.py
toalbackend/: asgi.py  settings.py  urls.py  wsgi.py
