[tool.poetry]
name = "toalbackend"
version = "0.1.0"
description = ""
authors = ["ramazanemreosmanoglu <ramazanemre@protonmail.com>"]
license = "GNU GPL v3"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.13.1"
Django = "^4.0.2"
django-cors-headers = "^3.11.0"

[tool.poetry.dev-dependencies]
Django = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
